added slides for moscow-beijing seminar

--- a/research.html
+++ b/research.html
@@ -232,6 +232,7 @@
 					<p>
 					<h3>Some slides and videos</h3>		
 					<ul>
+						<li><i><a href="documents/slides/moscow-beijing-2025.pdf" target="_blank">Constructing locally flat surfaces in 4-manifolds</a></i> Moscow-Beijing topology seminar, June 18 and 25, 2025</li>
 						<li><i><a href="documents/slides/counterexamples-columbia.pdf" target="_blank">Counterexamples in 4-manifold topology,</a></i> Columbia geometry and topology seminar, March 4, 2022</li>
 						<li><i><a href="documents/slides/Mathenacht-Universum-2021.pdf" target="_blank">Welche Form hat unser Universum,</a></i> <a href="http://www.hcm.uni-bonn.de/index.php?id=5032" target="_blank">Mathenacht aus Bonn und M&#252;nster,</a> November 26, 2021</li>
 						<li><i><a href="https://youtu.be/yKEi0i84LGE" target="_blank">Embedding surfaces in 4-manifolds,</a></i> <a href="https://www.ncngt.org/home" target="_blank">Nearly Carbon Neutral Geometry and Topology Conference,</a> plenary talk, June 22, 2021</li>
