Added RHS paper and Lidman as collaborator

--- a/research.html
+++ b/research.html
@@ -83,6 +83,8 @@
 					
 					<h3>Papers and preprints</h3>
 					<ul>			
+						<li><a href="https://arxiv.org/abs/2507.17584">Not all knots are smoothly round handle slice</a><br/>
+							(With <a href="https://sites.google.com/ncsu.edu/tlid/home">Tye Lidman</a> and <a href="https://sites.google.com/view/anmiller/">Allison N. Miller</a>)
 						<li><a href="https://arxiv.org/abs/2412.18423">Direct and indirect constructions  of locally flat surfaces in 4-manifolds</a> 
 						<li><a href="https://arxiv.org/abs/2402.04839">On a volume invariant of 3-manifolds.</a> <br/>
 						(With <a href="https://www.mathematik.hu-berlin.de/~kegemarc/">Marc Kegel</a>, <a href="https://sites.google.com/view/jonathan-spreer/">Jonathan Spreer</a>, <a href="https://sites.google.com/view/em-k-thompson/home">Em Thompson</a>, and <a href="https://www.maths.usyd.edu.au/u/tillmann/">Stephan Tillmann</a>)
@@ -185,6 +187,7 @@
 						<li><a href="https://sites.google.com/site/kminhoon/">Min Hoon Kim</a></li>
 						<li><a href="https://sites.google.com/a/wisc.edu/alexandra-a-kjuchukova/home">Alexandra Kjuchukova</a></li>
 						<li><a href="http://www.lewark.de/lukas/">Lukas Lewark</a></li>
+						<li><a href="https://sites.google.com/ncsu.edu/tlid/home">Tye Lidman</a></li>
 						<li><a href="https://users.renyi.hu/~marengon/">Marco Marengon</a></li>
 						<li><a href="https://sites.google.com/view/duncanmccoy/home">Duncan McCoy</a></li>
 						<li><a href="http://jeffreymeier.org/">Jeffrey Meier</a></li>
