Added Calc 2:Adv

--- a/teaching.html
+++ b/teaching.html
@@ -50,6 +50,12 @@
 					<h2><span>MPIM/Uni Bonn</span></h2>
 					<br/>
 					<ul>
+						<li>Calculus 2: Advanced, Semester 2 2025, see LMS</li>
+					</ul>
+					<br/>
+					<h2><span>MPIM/Uni Bonn</span></h2>
+					<br/>
+					<ul>
 						<li><a href="https://imsundberg.github.io/concordance/">Slice knots and knot concordance</a> (co-taught with <a href="Isaac Sundberg">Isaac Sundberg</a>), Summer semester 2023.</li>
 						<li><a href="https://www.maths.gla.ac.uk/~mpowell/topological-manifolds-seminar.html">Topological manifolds II (seminar course)</a> (co-taught with <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>), Summer semester 2021.</li>
 						<li><a href="http://www.math.uni-bonn.de/people/daniel/2021/geotopo/">Einführung in die Geometrie und Topologie</a> (co-taught with <a href="http://www.math.uni-bonn.de/people/daniel/">Daniel Kasprowski</a>), Summer semester 2021.</li>
