Corrected section header

--- a/teaching.html
+++ b/teaching.html
@@ -47,13 +47,13 @@
 				<div id="main">
 		
 					<div id="content">
-					<h2><span>MPIM/Uni Bonn</span></h2>
+					<h2><span>University of Melbourne</span></h2>
 					<br/>
 					<ul>
 						<li>Calculus 2: Advanced, Semester 2 2025, see LMS</li>
 					</ul>
 					<br/>
-					<h2><span>MPIM/Uni Bonn</span></h2>
+					<h2><span>MPIM/University of Bonn</span></h2>
 					<br/>
 					<ul>
 						<li><a href="https://imsundberg.github.io/concordance/">Slice knots and knot concordance</a> (co-taught with <a href="Isaac Sundberg">Isaac Sundberg</a>), Summer semester 2023.</li>
