--- a/research.html
+++ b/research.html
@@ -83,6 +83,10 @@
 					
 					<h3>Papers and preprints</h3>
 					<ul>			
+<!--						<li><a href="">On the detection of knotted spheres by their traces in high dimensions</a><br/>
+							(With <a href="">Valentina Bais</a>, <a href="">Alessio di Prisa</a>, <a href="">Daniel Hartman</a>, <a href="">Chun-Sheng Hsueh</a>, <a href="">Marc Kegel</a>, <a href="">Alice Merz</a>, <a href="">Mark Pencovitch</a>, <a href="">Diego Santoro</a>, <a href="">Paula Tru&ouml; l</a>, and <a href="">Laura Wakelin</a>) 
+						<li><a href="https://arxiv.org/abs/2508.07504">Homotopy classification of 4-manifolds with 3-manifold fundamental group</a><br/>
+							(With <a href="https://sites.google.com/ncsu.edu/tlid/home">Jonathan Hillman</a>, <a href="https://dkasprowski.github.io/">Daniel Kasprowski</a> and <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>)
 						<li><a href="https://arxiv.org/abs/2507.17584">Not all knots are smoothly round handle slice</a><br/>
 							(With <a href="https://sites.google.com/ncsu.edu/tlid/home">Tye Lidman</a> and <a href="https://sites.google.com/view/anmiller/">Allison N. Miller</a>)
 						<li><a href="https://arxiv.org/abs/2412.18423">Direct and indirect constructions  of locally flat surfaces in 4-manifolds</a> 
@@ -277,3 +281,4 @@
 		</div>
 	</body>
 </html>
+
