--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
 <!--						<li><a href="">On the detection of knotted spheres by their traces in high dimensions</a><br/>
 							(With <a href="">Valentina Bais</a>, <a href="">Alessio di Prisa</a>, <a href="">Daniel Hartman</a>, <a href="">Chun-Sheng Hsueh</a>, <a href="">Marc Kegel</a>, <a href="">Alice Merz</a>, <a href="">Mark Pencovitch</a>, <a href="">Diego Santoro</a>, <a href="">Paula Tru&ouml; l</a>, and <a href="">Laura Wakelin</a>) 
 						<li><a href="https://arxiv.org/abs/2508.07504">Homotopy classification of 4-manifolds with 3-manifold fundamental group</a><br/>
-							(With <a href="https://sites.google.com/ncsu.edu/tlid/home">Jonathan Hillman</a>, <a href="https://dkasprowski.github.io/">Daniel Kasprowski</a> and <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>)
+							(With <a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a>, <a href="https://dkasprowski.github.io/">Daniel Kasprowski</a> and <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>)
 						<li><a href="https://arxiv.org/abs/2507.17584">Not all knots are smoothly round handle slice</a><br/>
 							(With <a href="https://sites.google.com/ncsu.edu/tlid/home">Tye Lidman</a> and <a href="https://sites.google.com/view/anmiller/">Allison N. Miller</a>)
 						<li><a href="https://arxiv.org/abs/2412.18423">Direct and indirect constructions  of locally flat surfaces in 4-manifolds</a> 
@@ -186,6 +186,7 @@
 						<li><a href="https://people.uwec.edu/daviscw/">Christopher W. Davis</a></li>
 						<li><a href="https://people.math.ethz.ch/~pfeller/">Peter Feller</a></li>
 						<li><a href="https://www.uni-regensburg.de/Fakultaeten/nat_Fak_I/friedl/">Stefan Friedl</a></li>
+						<a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a>
 						<li><a href="http://www.math.uni-bonn.de/people/daniel/">Daniel Kasprowski</a></li>
 						<li><a href="https://www.mathematik.hu-berlin.de/~kegemarc/">Marc Kegel</a></li>
 						<li><a href="https://sites.google.com/site/kminhoon/">Min Hoon Kim</a></li>
@@ -281,4 +282,5 @@
 		</div>
 	</body>
 </html>
+
 
