--- a/research.html
+++ b/research.html
@@ -186,7 +186,7 @@
 						<li><a href="https://people.uwec.edu/daviscw/">Christopher W. Davis</a></li>
 						<li><a href="https://people.math.ethz.ch/~pfeller/">Peter Feller</a></li>
 						<li><a href="https://www.uni-regensburg.de/Fakultaeten/nat_Fak_I/friedl/">Stefan Friedl</a></li>
-						<a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a>
+						<li></li><a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a></li>
 						<li><a href="http://www.math.uni-bonn.de/people/daniel/">Daniel Kasprowski</a></li>
 						<li><a href="https://www.mathematik.hu-berlin.de/~kegemarc/">Marc Kegel</a></li>
 						<li><a href="https://sites.google.com/site/kminhoon/">Min Hoon Kim</a></li>
@@ -282,6 +282,7 @@
 		</div>
 	</body>
 </html>
+
 
 
 
