Added RGB paper details

--- a/research.html
+++ b/research.html
@@ -83,8 +83,8 @@
 					
 					<h3>Papers and preprints</h3>
 					<ul>			
-<!--						<li><a href="">On the detection of knotted spheres by their traces in high dimensions</a><br/>
-							(With <a href="">Valentina Bais</a>, <a href="">Alessio di Prisa</a>, <a href="">Daniel Hartman</a>, <a href="">Chun-Sheng Hsueh</a>, <a href="">Marc Kegel</a>, <a href="">Alice Merz</a>, <a href="">Mark Pencovitch</a>, <a href="">Diego Santoro</a>, <a href="">Paula Tru&ouml; l</a>, and <a href="">Laura Wakelin</a>) -->
+						<li><a href="https://arxiv.org/abs/2511.07251">On the detection of knotted spheres by their traces in high dimensions</a><br/>
+							(With <a href="https://sites.google.com/view/webpage-of-valentina-bais/home-page">Valentina Bais</a>, <a href="https://sites.google.com/view/alessiodiprisa">Alessio di Prisa</a>, <a href="https://sites.google.com/view/danielhhartman/home">Daniel Hartman</a>, <a href="https://sites.google.com/g.ntu.edu.tw/chun-sheng-hsueh">Chun-Sheng Hsueh</a>, <a href="https://marckegel.github.io/">Marc Kegel</a>, <a href="https://sites.google.com/view/amerz/home-page">Alice Merz</a>, <a href="https://sites.google.com/view/mark-pencovitch/">Mark Pencovitch</a>, <a href="https://sites.google.com/view/santoro">Diego Santoro</a>, <a href="https://guests.mpim-bonn.mpg.de/truoel/">Paula Tru&ouml; l</a>, and <a href="https://sites.google.com/view/laurawakelin">Laura Wakelin</a>) 
 						<li><a href="https://arxiv.org/abs/2508.07504">Homotopy classification of 4-manifolds with 3-manifold fundamental group</a><br/>
 							(With <a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a>, <a href="https://dkasprowski.github.io/">Daniel Kasprowski</a> and <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>)
 						<li><a href="https://arxiv.org/abs/2507.17584">Not all knots are smoothly round handle slice</a><br/>
@@ -180,15 +180,19 @@
 					<ul>
 						<li><a href="https://sites.google.com/view/paoloaceto/home">Paolo Aceto</a></li>
 						<li><a href="http://www.math.unibe.ch/ueber_uns/personen/prof_dr_baader_sebastian/index_ger.html">Sebastian Baader</a></li>
+						<li><a href="https://sites.google.com/view/webpage-of-valentina-bais/home-page">Valentina Bais</a></li>
 						<li><a href="https://www.math.uni-bielefeld.de/~sbehrens/">Stefan Behrens</a></li>
 						<li><a href="https://sites.google.com/view/cbregman">Corey Bregman</a></li>
 						<li><a href="https://math.rice.edu/~cochran/">Tim D. Cochran</a></li>
 						<li><a href="https://people.uwec.edu/daviscw/">Christopher W. Davis</a></li>
+						<li><a href="https://sites.google.com/view/alessiodiprisa">Alessio di Prisa</a></li>
 						<li><a href="https://people.math.ethz.ch/~pfeller/">Peter Feller</a></li>
 						<li><a href="https://www.uni-regensburg.de/Fakultaeten/nat_Fak_I/friedl/">Stefan Friedl</a></li>
+						<li><a href="https://sites.google.com/view/danielhhartman/home">Daniel Hartman</a></li> 
 						<li></li><a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a></li>
+						<li><a href="https://sites.google.com/g.ntu.edu.tw/chun-sheng-hsueh">Chun-Sheng Hsueh</a></li>
 						<li><a href="http://www.math.uni-bonn.de/people/daniel/">Daniel Kasprowski</a></li>
-						<li><a href="https://www.mathematik.hu-berlin.de/~kegemarc/">Marc Kegel</a></li>
+						<li><a href="https://marckegel.github.io/">Marc Kegel</a></li>
 						<li><a href="https://sites.google.com/site/kminhoon/">Min Hoon Kim</a></li>
 						<li><a href="https://sites.google.com/a/wisc.edu/alexandra-a-kjuchukova/home">Alexandra Kjuchukova</a></li>
 						<li><a href="http://www.lewark.de/lukas/">Lukas Lewark</a></li>
@@ -196,23 +200,28 @@
 						<li><a href="https://users.renyi.hu/~marengon/">Marco Marengon</a></li>
 						<li><a href="https://sites.google.com/view/duncanmccoy/home">Duncan McCoy</a></li>
 						<li><a href="http://jeffreymeier.org/">Jeffrey Meier</a></li>
+						<li><a href="https://sites.google.com/view/amerz/home-page">Alice Merz</a></li>
 						<li><a href="https://sites.google.com/view/anmiller/home">Allison N. Miller</a></li>
 						<li><a href="https://homepages.uni-regensburg.de/~mif57716/index.html">Filip Misev</a></li>
 						<li><a href="http://nagel.io/">Matthias Nagel</a></li>
 						<li><a href="https://www.patrickorson.com">Patrick Orson</a></li>
 						<li><a href="https://mathsci.kaist.ac.kr/~jungpark0817/">JungHwan Park</a></li>
+						<li><a href="https://sites.google.com/view/mark-pencovitch/">Mark Pencovitch</a></li>
 						<li><a href="https://webusers.imj-prg.fr/~bram.petri/">Bram Petri</a></li>
 						<li><a href="https://politarczyk.faculty.wmi.amu.edu.pl/">Wojciech Politarczyk</a></li>
 						<li><a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a></li>
 						<li><a href="https://www.math.univ-toulouse.fr/~jraimbau/">Jean Raimbault</a></li>
 						<li><a href="http://people.brandeis.edu/~ruberman/">Daniel Ruberman</a></li>
 						<li><a href="https://sites.google.com/umn.edu/ssakalli/home">S&uuml;meyra Sakall&#x131;</a></li>
+						<li><a href="https://sites.google.com/view/santoro">Diego Santoro</a></li>
 						<li><a href="https://sites.google.com/view/jonathan-spreer/">Jonathan Spreer</a></li>
 						<li><a href="https://users.renyi.hu/~stipsicz/">Andr&aacute;s Stipsicz</a></li>	
 						<li><a href="http://people.mpim-bonn.mpg.de/teichner/Math/Home.html">Peter Teichner</a></li>
 						<li><a href="https://sites.google.com/view/em-k-thompson/home">Em Thompson</a></li>
 						<li><a href="https://www.maths.usyd.edu.au/u/tillmann/">Stephan Tillmann</a></li>.
-					</ul>
+						<li><a href="https://guests.mpim-bonn.mpg.de/truoel/">Paula Tru&ouml; l</a></li>
+						<li><a href="https://sites.google.com/view/laurawakelin">Laura Wakelin</a></li>
+						</ul>
 					</p>
 					<p>
 					<h3>Seminars/conferences/special sessions co/organised</h3>		
@@ -282,6 +291,7 @@
 		</div>
 	</body>
 </html>
+
 
 
 
