typo in Paula's last name

--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
 					<h3>Papers and preprints</h3>
 					<ul>			
 						<li><a href="https://arxiv.org/abs/2511.07251">On the detection of knotted spheres by their traces in high dimensions</a><br/>
-							(With <a href="https://sites.google.com/view/webpage-of-valentina-bais/home-page">Valentina Bais</a>, <a href="https://sites.google.com/view/alessiodiprisa">Alessio di Prisa</a>, <a href="https://sites.google.com/view/danielhhartman/home">Daniel Hartman</a>, <a href="https://sites.google.com/g.ntu.edu.tw/chun-sheng-hsueh">Chun-Sheng Hsueh</a>, <a href="https://marckegel.github.io/">Marc Kegel</a>, <a href="https://sites.google.com/view/amerz/home-page">Alice Merz</a>, <a href="https://sites.google.com/view/mark-pencovitch/">Mark Pencovitch</a>, <a href="https://sites.google.com/view/santoro">Diego Santoro</a>, <a href="https://guests.mpim-bonn.mpg.de/truoel/">Paula Tru&ouml; l</a>, and <a href="https://sites.google.com/view/laurawakelin">Laura Wakelin</a>) 
+							(With <a href="https://sites.google.com/view/webpage-of-valentina-bais/home-page">Valentina Bais</a>, <a href="https://sites.google.com/view/alessiodiprisa">Alessio di Prisa</a>, <a href="https://sites.google.com/view/danielhhartman/home">Daniel Hartman</a>, <a href="https://sites.google.com/g.ntu.edu.tw/chun-sheng-hsueh">Chun-Sheng Hsueh</a>, <a href="https://marckegel.github.io/">Marc Kegel</a>, <a href="https://sites.google.com/view/amerz/home-page">Alice Merz</a>, <a href="https://sites.google.com/view/mark-pencovitch/">Mark Pencovitch</a>, <a href="https://sites.google.com/view/santoro">Diego Santoro</a>, <a href="https://guests.mpim-bonn.mpg.de/truoel/">Paula Tru&ouml;l</a>, and <a href="https://sites.google.com/view/laurawakelin">Laura Wakelin</a>) 
 						<li><a href="https://arxiv.org/abs/2508.07504">Homotopy classification of 4-manifolds with 3-manifold fundamental group</a><br/>
 							(With <a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a>, <a href="https://dkasprowski.github.io/">Daniel Kasprowski</a> and <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>)
 						<li><a href="https://arxiv.org/abs/2507.17584">Not all knots are smoothly round handle slice</a><br/>
@@ -218,8 +218,8 @@
 						<li><a href="https://users.renyi.hu/~stipsicz/">Andr&aacute;s Stipsicz</a></li>	
 						<li><a href="http://people.mpim-bonn.mpg.de/teichner/Math/Home.html">Peter Teichner</a></li>
 						<li><a href="https://sites.google.com/view/em-k-thompson/home">Em Thompson</a></li>
-						<li><a href="https://www.maths.usyd.edu.au/u/tillmann/">Stephan Tillmann</a></li>.
-						<li><a href="https://guests.mpim-bonn.mpg.de/truoel/">Paula Tru&ouml; l</a></li>
+						<li><a href="https://www.maths.usyd.edu.au/u/tillmann/">Stephan Tillmann</a></li>
+						<li><a href="https://guests.mpim-bonn.mpg.de/truoel/">Paula Tru&ouml;l</a></li>
 						<li><a href="https://sites.google.com/view/laurawakelin">Laura Wakelin</a></li>
 						</ul>
 					</p>
@@ -291,6 +291,7 @@
 		</div>
 	</body>
 </html>
+
 
 
 
