Updated MA students

--- a/research.html
+++ b/research.html
@@ -168,13 +168,15 @@
 					<p><h3>Masters students (and position after graduating)</h3>
 					<ul>
 						<li><a href="https://becarios.fundacionlacaixa.org/en/web/guest/fellows/didac-violan-aris-B005227">Didac Violan Aris</a>, PhD student at ICMAT Madrid</li>
-						<li>Constanze Schwarz, Risikomanagementberatung KPMG</li>
+						<li><a href="">Constanze Schwarz</a>, Risikomanagementberatung KPMG</li>
 						<li><a href="https://sites.google.com/view/isaccononinomath/home-page">Isacco Nonino</a>, PhD student at Glasgow</li>
-						<li>Fadi Mezher, PhD student at Copenhagen</li>
-						<li>Raphael Floris, PhD student at RWTH Aachen</li>
+						<li>< a href="https://sites.google.com/view/fadi-mezher/home">Fadi Mezher</a>a>, PhD student at Copenhagen</li>
+						<li><a href="">Raphael Floris</a>, PhD student at RWTH Aachen</li>
 						<li><a href="http://yikaiteng.net/">Yikai Teng</a>, PhD student at Rutgers Newark</li>
 						<li><a href="">Agata Sienicka</a>, Data Scientist, Instytut Monitorowania Mediów</li>
-						<li>Cara Hobohm</li>
+						<li><a href="">Cara Hobohm</a>, PhD student at University of Luxembourg</li>
+						<li><a href="">Magdalina von Wunsch Rolshoven</a></li>
+						<li><a href="">Zihan Lin</a> (cosupervised with Diarmuid Crowley)</li>
 						</ul>
 					<p><h3>Collaborators</h3>
 					<ul>
@@ -291,6 +293,7 @@
 		</div>
 	</body>
 </html>
+
 
 
 
