--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
 							(With <a href="https://www.maths.usyd.edu.au/u/jonh/">Jonathan Hillman</a>, <a href="https://dkasprowski.github.io/">Daniel Kasprowski</a> and <a href="https://www.maths.gla.ac.uk/~mpowell/">Mark Powell</a>)
 						<li><a href="https://arxiv.org/abs/2507.17584">Not all knots are smoothly round handle slice</a><br/>
 							(With <a href="https://sites.google.com/ncsu.edu/tlid/home">Tye Lidman</a> and <a href="https://sites.google.com/view/anmiller/">Allison N. Miller</a>)
-						<li><a href="https://arxiv.org/abs/2412.18423">Direct and indirect constructions  of locally flat surfaces in 4-manifolds</a> 
+						<li><a href="https://arxiv.org/abs/2412.18423">Constructing locally flat surfaces in 4-manifolds</a> 
 						<li><a href="https://arxiv.org/abs/2402.04839">On a volume invariant of 3-manifolds.</a> <br/>
 						(With <a href="https://www.mathematik.hu-berlin.de/~kegemarc/">Marc Kegel</a>, <a href="https://sites.google.com/view/jonathan-spreer/">Jonathan Spreer</a>, <a href="https://sites.google.com/view/em-k-thompson/home">Em Thompson</a>, and <a href="https://www.maths.usyd.edu.au/u/tillmann/">Stephan Tillmann</a>)
 						<li><a href="https://arxiv.org/abs/2311.12168">Slice knots and knot concordance.</a> <i>Winter Braids Lecture Notes</i>, Vol. 8, Course no II, p. 1-31, 2021.<br/>
@@ -293,6 +293,7 @@
 		</div>
 	</body>
 </html>
+
 
 
 
