Corrected typo in Fadi website link

--- a/research.html
+++ b/research.html
@@ -170,7 +170,7 @@
 						<li><a href="https://becarios.fundacionlacaixa.org/en/web/guest/fellows/didac-violan-aris-B005227">Didac Violan Aris</a>, PhD student at ICMAT Madrid</li>
 						<li><a href="">Constanze Schwarz</a>, Risikomanagementberatung KPMG</li>
 						<li><a href="https://sites.google.com/view/isaccononinomath/home-page">Isacco Nonino</a>, PhD student at Glasgow</li>
-						<li>< a href="https://sites.google.com/view/fadi-mezher/home">Fadi Mezher</a>a>, PhD student at Copenhagen</li>
+						<li><a href="https://sites.google.com/view/fadi-mezher/home">Fadi Mezher</a>, PhD student at Copenhagen</li>
 						<li><a href="">Raphael Floris</a>, PhD student at RWTH Aachen</li>
 						<li><a href="http://yikaiteng.net/">Yikai Teng</a>, PhD student at Rutgers Newark</li>
 						<li><a href="">Agata Sienicka</a>, Data Scientist, Instytut Monitorowania Mediów</li>
@@ -293,6 +293,7 @@
 		</div>
 	</body>
 </html>
+
 
 
 
